--- a/project/animatas/index.html
+++ b/project/animatas/index.html
@@ -689,6 +689,8 @@ What are the advantages and drawbacks of robots in the classroom in terms of tea
 
 
 
+  
+
 
 <div class="media stream-item">
   <div class="media-body">
@@ -697,6 +699,10 @@ What are the advantages and drawbacks of robots in the classroom in terms of tea
       <a href="/publication/el-hamamsy-learning-2019/" >Learning By Collaborative Teaching: An Engaging Multi-Party CoWriter Activity</a>
     </h3>
 
+    
+    <div class="article-style">
+      This paper presents the design of a novel and engaging collaborative learning activity for handwriting where a group of participants …
+    </div>
     
 
     <div class="stream-meta article-metadata">
