--- a/publication_types/1/index.html
+++ b/publication_types/1/index.html
@@ -457,6 +457,8 @@
     <h2><a href="/publication/yadollahi-2020-exploring/">Exploring the Role of Perspective Taking in Educational Child-Robot Interaction</a></h2>
     <div class="article-style">
       
+      Perspective taking is an important skill to have and learn, which can be applied in many different domains and disciplines. While the ability to recognize other’s perspective develops in humans from childhood and solidifies during school years, it …
+      
     </div>
   </div>
   
