--- a/publication_types/2/index.html
+++ b/publication_types/2/index.html
@@ -425,6 +425,8 @@
     <h2><a href="/publication/gargot-2020-acquisition/">Acquisition of handwriting in children with and without dysgraphia: A computational approach</a></h2>
     <div class="article-style">
       
+      Handwriting is a complex skill to acquire and it requires years of training to be mastered. Children presenting dysgraphia exhibit difficulties automatizing their handwriting. This can bring anxiety and can negatively impact education. 280 children …
+      
     </div>
   </div>
   
