--- a/project/irecheck/index.html
+++ b/project/irecheck/index.html
@@ -709,6 +709,8 @@
 
 
 
+  
+
 
 <div class="media stream-item">
   <div class="media-body">
@@ -717,6 +719,10 @@
       <a href="/publication/el-hamamsy-learning-2019/" >Learning By Collaborative Teaching: An Engaging Multi-Party CoWriter Activity</a>
     </h3>
 
+    
+    <div class="article-style">
+      This paper presents the design of a novel and engaging collaborative learning activity for handwriting where a group of participants …
+    </div>
     
 
     <div class="stream-meta article-metadata">
