--- a/index.html
+++ b/index.html
@@ -767,7 +767,7 @@ I am also the treasurer for the newly created #SydCHI Local Chapter.</p>
 
 <div class="view-list-item">
   <i class="far fa-newspaper pub-icon" aria-hidden="true"></i>
-  <a href="/post/hri2020_demo_award/" >Best Demo Award at HRI 2020!</a>
+  <a href="/post/hri2020_demo_award/" >🏆 Best Demo Award at HRI 2020!</a>
 
   
 
