--- a/project/cowriting_kazakh/index.html
+++ b/project/cowriting_kazakh/index.html
@@ -849,7 +849,7 @@
   <div class="media-body">
 
     <h3 class="article-title mb-0 mt-0">
-      <a href="/post/hri2020_demo_award/" >Best Demo Award at HRI 2020!</a>
+      <a href="/post/hri2020_demo_award/" >🏆 Best Demo Award at HRI 2020!</a>
     </h3>
 
     
