--- a/publication/index.html
+++ b/publication/index.html
@@ -2419,6 +2419,12 @@
 
 
 
+  
+  <a class="btn btn-outline-primary my-1 mr-1 btn-sm" href="/project/cowriting_kazakh/">
+    Project
+  </a>
+  
+
 
 
 
