--- a/publication/zhanel-2020/index.html
+++ b/publication/zhanel-2020/index.html
@@ -519,6 +519,12 @@
 
     
 
+<div class="article-tags">
+  
+  <a class="badge badge-light" href="/tags/cowriting_kazakh/">cowriting_kazakh</a>
+  
+</div>
+
 
     
 
