--- a/index.html
+++ b/index.html
@@ -1523,6 +1523,10 @@ I am also the treasurer for the newly created #SydCHI Local Chapter.</p>
 
 
 
+<a class="btn btn-outline-primary my-1 mr-1 btn-sm" href="https://doi.org/10.1038/s41539-021-00084-w" target="_blank" rel="noopener">
+  DOI
+</a>
+
 
 
     </div>
