--- a/publication/asselborn-2021-transferability/index.html
+++ b/publication/asselborn-2021-transferability/index.html
@@ -581,6 +581,10 @@
 
 
 
+<a class="btn btn-outline-primary my-1 mr-1" href="https://doi.org/10.1038/s41539-021-00084-w" target="_blank" rel="noopener">
+  DOI
+</a>
+
 
 
 </div>
