--- a/publication/index.html
+++ b/publication/index.html
@@ -907,6 +907,10 @@
 
 
 
+<a class="btn btn-outline-primary my-1 mr-1 btn-sm" href="https://doi.org/10.1038/s41539-021-00084-w" target="_blank" rel="noopener">
+  DOI
+</a>
+
 
 
     </div>
@@ -2201,6 +2205,10 @@
 
 
 
+
+<a class="btn btn-outline-primary my-1 mr-1 btn-sm" href="https://doi.org/10.3389/frobt.2020.00099" target="_blank" rel="noopener">
+  DOI
+</a>
 
 
 
