--- a/publication/sandygulova-hri-2020/index.html
+++ b/publication/sandygulova-hri-2020/index.html
@@ -577,6 +577,10 @@
 
 
 
+<a class="btn btn-outline-primary my-1 mr-1" href="https://doi.org/10.3389/frobt.2020.00099" target="_blank" rel="noopener">
+  DOI
+</a>
+
 
 
 </div>
