--- a/prospective/index.html
+++ b/prospective/index.html
@@ -433,7 +433,7 @@ Grans for visitors: french unsw others
   </div>
   
   <div>
-    <h2><a href="/prospective/phd/">PhD Position Available!</a></h2>
+    <h2><a href="/prospective/phd/">PhD Positions</a></h2>
     <div class="article-style">
       
       UNSW PhD program & Scholarships
