update phd page

--- a/prospective/phd/index.html
+++ b/prospective/phd/index.html
@@ -596,7 +596,7 @@ Your application should include:</p>
 <li>A CV, with copies of relevant grades, masters thesis work or publications.</li>
 </ul>
 <hr>
-<h1 id="tuition-scholarships">Tuition Scholarships</h1>
+<h2 id="admissions-and-scholarships">Admissions and Scholarships</h2>
 <p>To enrol in the PhD program in computer science at UNSW, you are expected to have a degree that is equivalent to a First Class Honours degree in Computer Science, Mathematics, or a related field.
 Obtaining a <a href="https://research.unsw.edu.au/postgraduate-research-scholarships">PhD scholarship</a> from UNSW is a very competitive process.
 <a href="https://selfassessment.research.unsw.edu.au/">UNSW&rsquo;s online self-assessment tool</a> gives a good indication of how competitive you are for scholarships.
