add master thesis

--- a/publication_types/7/index.html
+++ b/publication_types/7/index.html
@@ -419,6 +419,13 @@
     </div>
   </div>
   
+  <div>
+    <h2><a href="/publication/benkaouar-2012/">Detection of non-verbal communication cues using multi-modal sensors : engagement detection </a></h2>
+    <div class="article-style">
+      
+    </div>
+  </div>
+  
 
   
 
