adding week 2 CV

--- a/teaching/computer_vision/index.html
+++ b/teaching/computer_vision/index.html
@@ -447,7 +447,7 @@
   </div>
   
   <div>
-    <h2><a href="/teaching/computer_vision/week2/">Week2</a></h2>
+    <h2><a href="/teaching/computer_vision/week2/">Week2 - Image Processing</a></h2>
     <div class="article-style">
       
       Demos for week 2
