update robohub post

--- a/index.html
+++ b/index.html
@@ -995,7 +995,7 @@ My latest work has investigated the use of tangible robots in education and reha
 
 <div class="view-list-item">
   <i class="far fa-newspaper pub-icon" aria-hidden="true"></i>
-  <a href="/post/20220205_nao_blogpost/" >Making the healine of  Robohub</a>
+  <a href="/post/20220205_nao_blogpost/" >Making the headline of  Robohub</a>
 
   
 
