--- a/index.html
+++ b/index.html
@@ -3020,7 +3020,7 @@ My latest work has investigated the use of tangible robots in education and reha
 
 
 
-<a class="btn btn-outline-primary btn-page-header btn-sm" href="https://doi.org/10.1145/3472307.3484167" target="_blank" rel="noopener">
+<a class="btn btn-outline-primary btn-page-header btn-sm" href="/files/papers/Speech_Driven_Gesture_Generation__A_Review.pdf" target="_blank" rel="noopener">
   PDF
 </a>
 
