--- a/publication/index.html
+++ b/publication/index.html
@@ -1267,7 +1267,7 @@
 
 
 
-<a class="btn btn-outline-primary btn-page-header btn-sm" href="https://doi.org/10.1145/3472307.3484167" target="_blank" rel="noopener">
+<a class="btn btn-outline-primary btn-page-header btn-sm" href="/files/papers/Speech_Driven_Gesture_Generation__A_Review.pdf" target="_blank" rel="noopener">
   PDF
 </a>
 
