--- a/publication/liu-2021-speech/index.html
+++ b/publication/liu-2021-speech/index.html
@@ -784,7 +784,7 @@
 
 
 
-<a class="btn btn-outline-primary btn-page-header" href="https://doi.org/10.1145/3472307.3484167" target="_blank" rel="noopener">
+<a class="btn btn-outline-primary btn-page-header" href="/files/papers/Speech_Driven_Gesture_Generation__A_Review.pdf" target="_blank" rel="noopener">
   PDF
 </a>
 
