--- a/publication/guneysu-2018-iterative/index.html
+++ b/publication/guneysu-2018-iterative/index.html
@@ -876,6 +876,14 @@
 
 
 
+<div class="article-tags">
+  
+  <a class="badge badge-light" href="/tags/cellulo/">cellulo</a>
+  
+  <a class="badge badge-light" href="/tags/rehabilitation/">rehabilitation</a>
+  
+</div>
+
 
 
 
