--- a/publication/guneysu-ozgur-gamified-2020/index.html
+++ b/publication/guneysu-ozgur-gamified-2020/index.html
@@ -858,21 +858,9 @@
 
 <div class="article-tags">
   
-  <a class="badge badge-light" href="/tags/tangible-robots/">tangible robots</a>
+  <a class="badge badge-light" href="/tags/cellulo/">cellulo</a>
   
-  <a class="badge badge-light" href="/tags/task-performance-and-analysis/">Task Performance and Analysis</a>
-  
-  <a class="badge badge-light" href="/tags/aging/">Aging</a>
-  
-  <a class="badge badge-light" href="/tags/gamified-activities/">Gamified activities</a>
-  
-  <a class="badge badge-light" href="/tags/healthy-ageing/">Healthy Ageing</a>
-  
-  <a class="badge badge-light" href="/tags/motor-learning/">motor learning</a>
-  
-  <a class="badge badge-light" href="/tags/robotic-exercise/">Robotic exercise</a>
-  
-  <a class="badge badge-light" href="/tags/transfer-learning/">Transfer Learning</a>
+  <a class="badge badge-light" href="/tags/rehabilitation/">rehabilitation</a>
   
 </div>
 
