--- a/project/cellulo/index.html
+++ b/project/cellulo/index.html
@@ -869,27 +869,26 @@
   <div class="article-container">
 
     <div class="article-style">
-      <p>With the Cellulo project [6], a part of the Transversal Educational Activities of the NCCR Robotics, we introduced a
+      <p>With the Cellulo project, a part of the Educational Grand Challenge of the NCCR Robotics, we introduced a
 new robotic platform which is small and easily deployable. A dotted pattern printed on regular paper enables the
-Cellulo robots with absolute localization with a precision of 270 microns [7]. The robots also have a new
-locomotion system with a drive relying on a permanent magnet to actuate coated metal balls [8]. This new drive
+Cellulo robots with absolute localization with a precision of 270 microns. The robots also have a new
+locomotion system with a drive relying on a permanent magnet to actuate coated metal balls. This new drive
 design allows backdrivability; i.e. it allows the robot to move and to be moved without damaging it. With this
-system, we also implemented a haptic feedback modality, allowing the user to feel forces when grasping the robot
-[9].
+system, we also implemented a haptic feedback modality, allowing the user to feel forces when grasping the robot.
 The robots are connected via Bluetooth to a master (PC or tablet) that handles the logical and computation of the
 activity. The onboard PCB of the robots only allows for proceeding the localization (image capture and decoding of
 the pattern) and the control of the three wheels actuation.
-During two years, we developed several learning activities using the robots. The Figure for example shows the Feel
-the Wind activity, in which the learners were taught that the wind was formed by air moving from with high to low
+During four years, we developed several learning activities using the robots. In the Feel
+the Wind activity, the learners were taught that the wind was formed by air moving from with high to low
 pressure points.</p>
 
 <div style="position: relative; padding-bottom: 56.25%; height: 0; overflow: hidden;">
   <iframe src="https://www.youtube.com/embed/zv6nDMQCWCo" style="position: absolute; top: 0; left: 0; width: 100%; height: 100%; border:0;" allowfullscreen title="YouTube Video"></iframe>
 </div>
 
-<p>In the Cellulo project, we also started to explore the use of haptic feedback for learners. Haptic feedback enables us to
+<p>In the Cellulo project, we  started to explore the use of haptic feedback for learners. Haptic feedback enables us to
 render forces, but also borders, angles, or points. We developed a series of haptic capabilities and small interaction
-tasks that can be included in learning activities to inform the learner [9]. We tested the haptic feedback with
+tasks that can be included in learning activities to inform the learner. We tested the haptic feedback with
 children for instance in the symmetry activity, in which the child is able to formulate hypothesis on the placement
 of the symmetrical shape and to verify their claims by feel haptically the shape on paper (left Figure). We also tested
 with some pilot with visually impaired children who were able to explore a map of their classroom using the Cellulo
@@ -907,6 +906,12 @@ collaborative state of the group.</p>
 
 <div style="position: relative; padding-bottom: 56.25%; height: 0; overflow: hidden;">
   <iframe src="https://www.youtube.com/embed/s3KAoQNUPZs" style="position: absolute; top: 0; left: 0; width: 100%; height: 100%; border:0;" allowfullscreen title="YouTube Video"></iframe>
+</div>
+
+<p>Finally, we have been exploring the use of Cellulo robots for upper arm-rehabitation with the goal to develop a kit for occupational theraputic games.</p>
+
+<div style="position: relative; padding-bottom: 56.25%; height: 0; overflow: hidden;">
+  <iframe src="https://www.youtube.com/embed/f-7lrzXFtr0" style="position: absolute; top: 0; left: 0; width: 100%; height: 100%; border:0;" allowfullscreen title="YouTube Video"></iframe>
 </div>
 
 
