--- a/project/cellulo/index.html
+++ b/project/cellulo/index.html
@@ -932,6 +932,8 @@ collaborative state of the group.</p>
   
   <a class="badge badge-light" href="/tags/haptic/">haptic</a>
   
+  <a class="badge badge-light" href="/tags/visible/">visible</a>
+  
 </div>
 
 
