--- a/prospective/index.html
+++ b/prospective/index.html
@@ -692,7 +692,7 @@ Grans for visitors: french unsw others
       <h2><a href="/prospective/phd/" >PhD Positions</a></h2>
       <div class="article-style">
         
-          UNSW PhD program & Scholarships
+          PhD program & Scholarships
         
       </div>
     </div>
