--- a/index.html
+++ b/index.html
@@ -377,7 +377,7 @@
         
 
         <li class="nav-item">
-          <a class="nav-link " href="/files/CV_WafaJohal.pdf"><span>CV</span></a>
+          <a class="nav-link " href="/files/CV_WafaJohal-2.pdf"><span>CV</span></a>
         </li>
 
         
